Fixes an inefficiency in the generation of persistence time-series.
Refs #111801

Rescales a persistence source before determining the persistence times to use.

Refs #111821